# Witboost-MCP

./: MCPServer  README.md  __init__.py  config.py  config.yaml  mcp_server.py  pyproject.toml  requirements.txt
tests/: test_mcp_server.py
