[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-product-test-api"
version = "0.1.0"
description = "MCP-based Data Product Test API"
authors = [{ name="Your Name", email="you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest]
testpaths = ["tests"]